--- a/index.html
+++ b/index.html
@@ -7,6 +7,90 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="logo">
+        <h1>Calculator</h1>
+    </div>
+    <div class="mainContainer">
+        <div class="container">
+            <div id="ansContainer">
+                <h1 id="answer">1+2</h1>
+            </div>
+        </div>
+        <div class="numContainer">
+            <div class="row1">
+                <div class="clear">
+                    <h2 id="clear">AC</h2>
+                </div>
+                <div class="blank">
+                    <h2 id="blank1">b</h2>
+                </div>
+                <div class="blank2">
+                    <h2 id="blank2">B</h2>
+                </div>
+                <div class="divide">
+                    <h2 id="divide">/</h2>
+                </div>
+            </div>
+
+            <div class="row2">
+                <div class="seven">
+                    <h2 id="seven">7</h2>
+                </div>
+                <div class="eight">
+                    <h2 id="eight">8</h2>
+                </div>
+                <div class="nine">
+                    <h2 id="nine">9</h2>
+                </div>
+                <div class="times">
+                    <h2 id="times">X</h2>
+                </div>
+            </div>
+
+            <div class="row3">
+                <div class="four">
+                    <h2 id="four">4</h2>
+                </div>
+                <div class="five">
+                    <h2 id="five">5</h2>
+                </div>
+                <div class="six">
+                    <h2 id="six">6</h2>
+                </div>
+                <div class="minus">
+                    <h2 id="minus">-</h2>
+                </div>
+            </div>
+
+            <div class="row4">
+                <div class="one">
+                    <h2 id="one">1</h2>
+                </div>
+                <div class="two">
+                    <h2 id="two">2</h2>
+                </div>
+                <div class="three">
+                    <h2 id="three">3</h2>
+                </div>
+                <div class="plus">
+                    <h2 id="plus">+</h2>
+                </div>
+            </div>
+
+            <div class="row5">
+                <div class="zero">
+                    <h2 id="zero">0</h2>
+                </div>
+                <div class="dot">
+                    <h2 id="dot">.</h2>
+                </div>
+                <div class="equals">
+                    <h2 id="equals">=</h2>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="index.js"></script>
 </body>
 </html>
