added design to buttons

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="numContainer">
             <div class="row1">
                 <div class="clear">
-                    <h2 id="clear">AC</h2>
+                    <h2 id="clear">C</h2>
                 </div>
                 <div class="blank">
                     <h2 id="blank1">b</h2>
