made it functionable (reset after equals not yet implemented)

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="mainContainer">
         <div class="container">
             <div id="ansContainer">
-                <h1 id="answer">1+2</h1>
+                <h1 id="answer"></h1>
             </div>
         </div>
         <div class="numContainer">
@@ -22,10 +22,10 @@
                     <h2 id="clear">C</h2>
                 </div>
                 <div class="blank">
-                    <h2 id="blank1">b</h2>
+                    <h2 id="blank1">(</h2>
                 </div>
                 <div class="blank2">
-                    <h2 id="blank2">B</h2>
+                    <h2 id="blank2">)</h2>
                 </div>
                 <div class="divide">
                     <h2 id="divide">/</h2>
